fix: Filter button active style on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,11 @@ main {
   font: inherit;
 }
 
+.search-bar input:focus-visible {
+  outline: 2px solid var(--red-7);
+  outline-offset: 2px;
+}
+
 [data-theme="dark"] .search-bar input {
   background-color: var(--neutral-8);
   color: var(--gray-0);
@@ -137,6 +142,11 @@ main {
   transition: background 0.2s;
 }
 
+.filter-buttons button:focus-visible {
+  outline: 2px solid var(--red-5);
+  outline-offset: 2px;
+}
+
 [data-theme="dark"] .filter-buttons button {
   background-color: var(--neutral-8);
   border-color: var(--gray-7);
@@ -145,12 +155,12 @@ main {
 
 [data-theme="dark"] .filter-buttons button:focus-visible {
   background-color: var(--neutral-7);
-  outline: 2px solid var(--red-5);
-  outline-offset: 2px;
 }
 
-.filter-buttons button:hover {
-  opacity: 70%;
+@media (any-hover: hover) {
+  .filter-buttons button:hover {
+    opacity: 70%;
+  }
 }
 
 .filter-buttons button.active.active {
